Statistics Added for tasks completed in last seven days
